--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <html>
 <h1>Hello World!!</H1>
 </html>
+<ol>
+  <li>My name is Mitchell Riley</li>
+  <li>I am from Wisconsin</li>
+  <li>I am a freshman at Luther College</li>
+</ol>
