--- a/todo.html
+++ b/todo.html
@@ -3,38 +3,18 @@
 <h3>Mitchell Riley</h3>
 </html>
 <html>
-	<head>
-		<style>
-		p {
-			color: gray;
-			font-size: 28pt;
-		
-		}
-		.high {
-			background-color: green;
-		}
-		.medium {
-			background-color: blue;
-		}
-		.low {
-			background-color: purple;
-		}
-		.completed {
-			text-decoration: line-through;
-		</style>
-	</head>
 	<body>
-		<table>
-		<tr	class="completed"><td>Write paper for Paideia</td>
-		<tr class="completed"><td>Eat lunch</td>
-		<tr class="high"><td>Not get sick</td>
-		<tr class="medium"><td>Graduate with honors</td>
-		<tr class="high"><td>Pass all of my classes with all A's</td>
-		<tr class="low"><td>Play videogames for 12 hours straight</td>
-		<tr class="medium"><td>Find the love of my life here</td>
-		<tr class="high"><td>Not miss a day of school</td>
-		<tr class="low"><td>Learn different ways to throw a frisbee</td>
-		<tr class="medium"><td>Keep my room maintained and clean</td>
-		</table>
+		<ol>
+		<li class="high">Write paper for Paideia</li>
+		<li class="low">Eat lunch</li>
+		<li class="high">Not get sick</li>
+		<li class="medium">Graduate with honors</li>
+		<li class="high">Pass all of my classes with all A's</li>
+		<li class="low">Play videogames for 12 hours straight</li>
+		<li class="meduim">Find the love of my life here</li>
+		<li class="high">Not miss a day of school</li>
+		<li class="low">Learn different ways to throw a frisbee</li>
+		<li class="medium">Keep my room maintained and clean</li>
+		</ol>
 	</body>
 </html>
