NEW Committed Changes

--- a/index copy.html
+++ b/index copy.html
@@ -4,7 +4,7 @@
 	<head>
 		<style>
 		p {
-			color: green;
+			color: white;
 			font-size: 14pt;
 		{
 		body {
@@ -29,7 +29,8 @@
              top: 0px;
              left: 0px;
              width: 100%;
-             height: 20px;
+             height: 57px;
+             color: white;
          }
          nav {
              margin-top: 20px;
@@ -65,7 +66,7 @@
      </head>
      <body>
          <header>
-             Who is Mitchell Riley?
+             <h1>Who is Mitchell Riley?</h1>
          </header>
          <nav>
              <ul>
@@ -87,19 +88,15 @@
              <h2><li>Pictures!</li></h2>
          </section>
          <aside>
-             Other facts about me
-             <img src="http://interactivepython.org/runestone/static/webfundamentals/_images/img_sem_elements.gif" />
              <img Height= 500 Width = 350 src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/1474414_10203855401723135_5285592659045099697_n.jpg?oh=cb93cc7d8d67e5856d7ae6bf692db704&oe=54B3E33C&__gda__=1421314053_40fadb8fd3d51aedd13f75148b8bad37" />
+			 <img Height= 500 Width = 400 src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-frc3/v/t1.0-9/1231379_10201316597734622_1768256541_n.jpg?oh=e033c7bc4d355faed14ab858e422d610&oe=54C6D536&__gda__=1421610332_5478356531473c2599d0307cdce37b9e" />	         
+			 <img Height= 500 Width = 379 src="https://scontent-a-ord.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1902996_10203531848514507_1286296643035239001_n.jpg?oh=93627c83d830ef6e8baf111c0a207baf&oe=54B5A817" />	         
          </aside>
          <footer>
              Copyright Area, Contact Us.
          </footer>
      </body>
  </html>
-
-  </body>
-</html
-
 index.html
 me.jpg
 aboutme.html
